// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadDropzone should open files selection dialog 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <FileUploadDropzone
        fileNameRestrictions={/\\.\\+/}
        fileUploadLimit={10}
        filesInQueue={Array []}
        locale={Object {}}
        maxSize={1000}
        onDrop={[MockFunction]}
      >
        <div>
          <div
            className="columns"
          >
            <div
              className="column"
              onKeyPress={[Function]}
              tabIndex="0"
            >
              <t
                disableClick={false}
                disablePreview={true}
                disabled={false}
                maxSize={1000}
                minSize={0}
                multiple={true}
                onDrop={[Function]}
                preventDropOnDocument={true}
                style={
                  Object {
                    "padding": "0px",
                  }
                }
              >
                <div
                  aria-disabled={false}
                  className=""
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  style={
                    Object {
                      "padding": "0px",
                    }
                  }
                >
                  <FileUploadDropzoneStaticContent
                    locale={Object {}}
                  >
                    <div
                      className="columns file-instructions"
                    >
                      <div
                        className="column"
                      />
                      <div
                        className="column upload-instructions"
                      >
                        <FontIcon
                          className="material-icons"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <span
                            className="material-icons"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "display": "inline-block",
                                "fontSize": 24,
                                "muiPrepared": true,
                                "position": "relative",
                                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                                "userSelect": "none",
                              }
                            }
                          >
                            cloud_upload
                          </span>
                        </FontIcon>
                      </div>
                    </div>
                  </FileUploadDropzoneStaticContent>
                  <input
                    autoComplete="off"
                    disabled={false}
                    multiple={true}
                    onChange={[Function]}
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                    type="file"
                  />
                </div>
              </t>
            </div>
          </div>
        </div>
      </FileUploadDropzone>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`Component FileUploadDropzone should render component with default props 1`] = `
<div>
  <div
    className="columns"
  >
    <div
      className="column"
      onKeyPress={[Function]}
      tabIndex="0"
    >
      <t
        disableClick={false}
        disablePreview={true}
        disabled={false}
        maxSize={1000}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        preventDropOnDocument={true}
        style={
          Object {
            "padding": "0px",
          }
        }
      >
        <FileUploadDropzoneStaticContent
          locale={Object {}}
        />
      </t>
    </div>
  </div>
</div>
`;

exports[`Component FileUploadDropzone should render disabled component 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <FileUploadDropzone
        disabled={true}
        fileNameRestrictions={/\\.\\+/}
        fileUploadLimit={10}
        filesInQueue={Array []}
        locale={Object {}}
        maxSize={1000}
        onDrop={[MockFunction]}
      >
        <div>
          <div
            className="columns"
          >
            <div
              className="column"
              onKeyPress={[Function]}
              tabIndex="0"
            >
              <t
                disableClick={true}
                disablePreview={true}
                disabled={true}
                maxSize={1000}
                minSize={0}
                multiple={true}
                onDrop={[Function]}
                preventDropOnDocument={true}
                style={
                  Object {
                    "padding": "0px",
                  }
                }
              >
                <div
                  aria-disabled={true}
                  className=""
                  onClick={null}
                  onDragEnter={null}
                  onDragLeave={null}
                  onDragOver={null}
                  onDragStart={null}
                  onDrop={null}
                  style={
                    Object {
                      "padding": "0px",
                    }
                  }
                >
                  <FileUploadDropzoneStaticContent
                    locale={Object {}}
                  >
                    <div
                      className="columns file-instructions"
                    >
                      <div
                        className="column"
                      />
                      <div
                        className="column upload-instructions"
                      >
                        <FontIcon
                          className="material-icons"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <span
                            className="material-icons"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            style={
                              Object {
                                "color": "rgba(0, 0, 0, 0.87)",
                                "display": "inline-block",
                                "fontSize": 24,
                                "muiPrepared": true,
                                "position": "relative",
                                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                                "userSelect": "none",
                              }
                            }
                          >
                            cloud_upload
                          </span>
                        </FontIcon>
                      </div>
                    </div>
                  </FileUploadDropzoneStaticContent>
                  <input
                    autoComplete="off"
                    disabled={true}
                    multiple={true}
                    onChange={[Function]}
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                    type="file"
                  />
                </div>
              </t>
            </div>
          </div>
        </div>
      </FileUploadDropzone>
    </Router>
  </MemoryRouter>
</Provider>
`;
